[tool.poetry]
name = "dft-fft"
version = "0.1.0"
description = ""
authors = ["Aditya Wardianto <adityawardianto.19073@mhs.its.ac.id>"]

[tool.poetry.dependencies]
python = "3.9.7"
streamlit = "^1.1.0"
numpy = "^1.21.3"
plotly = "^5.3.1"

[tool.poetry.dev-dependencies]
icecream = "^2.1.1"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
